--- a/src/app/global.css
+++ b/src/app/global.css
@@ -10,3 +10,23 @@ body {
     font-family: 'IRANSans' !important;
     color: red;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(192, 56, 56, 0.5); */
+    /* Semi-transparent black background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    /* Ensure it appears on top of other content */
+}
+
+.spinner {
+    /* Add your styles for the spinner here */
+    color: #36afd7;
+}
